# sprout

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  install.ps1  install.sh
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
scripts/: install-hooks.sh  preflight.ps1  preflight.sh
src/: error.rs  lib.rs  main.rs  update_check.rs
src/cli/: command_tree.rs  mod.rs  schematic_kind.rs
src/commands/: doctor.rs  list.rs
src/context/: architecture.rs  dto_style.rs  generation_context.rs  mod.rs  persistence.rs
src/naming/: identifier.rs
src/prompts/: architecture_prompt.rs  dto_style_prompt.rs  mod.rs  name_prompt.rs  persistence_prompt.rs  schematic_kind_prompt.rs
src/rendering/: mod.rs  template_loader.rs  tera_engine.rs
src/schematics/: controller_schematic.rs  controller_test_schematic.rs  dto_schematic.rs  entity_schematic.rs  mapper_schematic.rs  mod.rs  registry.rs  repository_schematic.rs  resource_schematic.rs  service_schematic.rs  service_test_schematic.rs
src/workspace/: file_writer.rs  folder_conventions.rs  mod.rs  project_detector.rs
templates/controller/: controller.java.tera
templates/dto/: request_class.java.tera  request_record.java.tera  response_class.java.tera  response_record.java.tera
templates/entity/: jpa.java.tera  mongo.java.tera
templates/mapper/: mapstruct.java.tera
templates/repository/: jpa.java.tera  mongo.java.tera
templates/service/: implementation.java.tera  (+1 more)
tests/: cli_test.rs
(+6 files in other folders)
